--- a/myblog/templates/base.html
+++ b/myblog/templates/base.html
@@ -313,6 +313,11 @@
             {% endblock %}
         {% endblock %}
     </div>
+
+</div>
+<div class="jumbotron text-center text-sm-center text-xl-center text-lg-center"
+     style="margin-bottom:0;margin-top: 20px">
+    备案号：<a href="http://www.beian.miit.gov.cn" target="_blank">豫ICP备19019414号</a>
 </div>
 <!--引入js文件-->
 {#<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>#}
