增加项目部署相关

--- a/myblog/templates/base.html
+++ b/myblog/templates/base.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
     {% block head-title %}
-        <title>刘飞个人站点</title>
+        <title>Python编程学习</title>
     {% endblock %}
 
     <!--    Bootstrap核心css文件-->
@@ -117,7 +117,7 @@
                                 <li><i class="fa fa-calendar"></i>&nbsp;<small>2020-06-29</small></li>
                                 <li><i class="fa fa-user-circle">&nbsp;<small>刘飞</small></i></li>
                                 <li><i class="fa fa-tag" aria-hidden="true">&nbsp;<small><a href="javascript:;"
-                                                                                            class="text-success">人民日报</a></small></i>
+                                                                                            class="text-success">稀有资源</a></small></i>
                                 </li>
                             </ul>
                         </div>
@@ -136,7 +136,7 @@
                                 <li><i class="fa fa-calendar"></i>&nbsp;<small>2020-06-29</small></li>
                                 <li><i class="fa fa-user-circle">&nbsp;<small>刘飞</small></i></li>
                                 <li><i class="fa fa-tag" aria-hidden="true">&nbsp;<small><a href="javascript:;"
-                                                                                            class="text-success">人民日报</a></small></i>
+                                                                                            class="text-success">稀有资源</a></small></i>
                                 </li>
                             </ul>
                         </div>
@@ -154,7 +154,7 @@
                                 <li><i class="fa fa-calendar"></i>&nbsp;<small>2020-06-29</small></li>
                                 <li><i class="fa fa-user-circle">&nbsp;<small>刘飞</small></i></li>
                                 <li><i class="fa fa-tag" aria-hidden="true">&nbsp;<small><a href="javascript:;"
-                                                                                            class="text-success">人民日报</a></small></i>
+                                                                                            class="text-success">稀有资源</a></small></i>
                                 </li>
                             </ul>
                         </div>
@@ -294,21 +294,21 @@
             {% block right_bqy %}
                 <h6 class="bqy mt-4">标签云</h6>
                 <div class="border bg-light">
-                    <a href="javascript:;" class="badge badge-info mx-2 my-1 text-center">人民日报</a>
-                    <a href="javascript:;" class="badge badge-info mx-2 my-1 text-center">人民日报</a>
-                    <a href="javascript:;" class="badge badge-info mx-2 my-1 text-center">人民日报</a>
-                    <a href="javascript:;" class="badge badge-info mx-2 my-1 text-center">人民日报</a>
-                    <a href="javascript:;" class="badge badge-info mx-2 my-1 text-center">人民日报</a>
-                    <a href="javascript:;" class="badge badge-info mx-2 my-1 text-center">人民日报</a>
-                    <a href="javascript:;" class="badge badge-info mx-2 my-1 text-center">人民日报</a>
-                    <a href="javascript:;" class="badge badge-info mx-2 my-1 text-center">人民日报</a>
-                    <a href="javascript:;" class="badge badge-info mx-2 my-1 text-center">人民日报</a>
-                    <a href="javascript:;" class="badge badge-info mx-2 my-1 text-center">人民日报</a>
-                    <a href="javascript:;" class="badge badge-info mx-2 my-1 text-center">人民日报</a>
-                    <a href="javascript:;" class="badge badge-info mx-2 my-1 text-center">人民日报</a>
-                    <a href="javascript:;" class="badge badge-info mx-2 my-1 text-center">人民日报</a>
-                    <a href="javascript:;" class="badge badge-info mx-2 my-1 text-center">人民日报</a>
-                    <a href="javascript:;" class="badge badge-info mx-2 my-1 text-center">人民日报</a>
+                    <a href="javascript:;" class="badge badge-info mx-2 my-1 text-center">稀有资源</a>
+                    <a href="javascript:;" class="badge badge-info mx-2 my-1 text-center">稀有资源</a>
+                    <a href="javascript:;" class="badge badge-info mx-2 my-1 text-center">稀有资源</a>
+                    <a href="javascript:;" class="badge badge-info mx-2 my-1 text-center">稀有资源</a>
+                    <a href="javascript:;" class="badge badge-info mx-2 my-1 text-center">稀有资源</a>
+                    <a href="javascript:;" class="badge badge-info mx-2 my-1 text-center">稀有资源</a>
+                    <a href="javascript:;" class="badge badge-info mx-2 my-1 text-center">稀有资源</a>
+                    <a href="javascript:;" class="badge badge-info mx-2 my-1 text-center">稀有资源</a>
+                    <a href="javascript:;" class="badge badge-info mx-2 my-1 text-center">稀有资源</a>
+                    <a href="javascript:;" class="badge badge-info mx-2 my-1 text-center">稀有资源</a>
+                    <a href="javascript:;" class="badge badge-info mx-2 my-1 text-center">稀有资源</a>
+                    <a href="javascript:;" class="badge badge-info mx-2 my-1 text-center">稀有资源</a>
+                    <a href="javascript:;" class="badge badge-info mx-2 my-1 text-center">稀有资源</a>
+                    <a href="javascript:;" class="badge badge-info mx-2 my-1 text-center">稀有资源</a>
+                    <a href="javascript:;" class="badge badge-info mx-2 my-1 text-center">稀有资源</a>
                 </div>
             {% endblock %}
         {% endblock %}
@@ -317,7 +317,7 @@
 </div>
 <div class="jumbotron text-center text-sm-center text-xl-center text-lg-center"
      style="margin-bottom:0;margin-top: 20px">
-    备案号：<a href="http://www.beian.miit.gov.cn" target="_blank">豫ICP备19019414号</a>
+    备案号：<a href="https://beian.miit.gov.cn/#/Integrated/index" target="_blank">豫ICP备19019414号</a>
 </div>
 <!--引入js文件-->
 {#<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>#}
