--- a/myblog/templates/daohang.html
+++ b/myblog/templates/daohang.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top" id="navbar">
-    <a href="{% url 'index/' %}" class="navbar-brand px-5"><b><i>刘飞</i></b><small>&nbsp;个人站点</small></a>
+    <a href="{% url 'index/' %}" class="navbar-brand px-5"><b><i>Python</i></b><small>&nbsp;编程学习</small></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -34,9 +34,9 @@
                     <a href="{% url 'dream/' %}" class="nav-link">励志名言</a>
                 {% endif %}
             </li>
-            <li class="nav-item">
-                <a href="javascript:;" class="nav-link">给我留言</a>
-            </li>
+{#            <li class="nav-item">#}
+{#                <a href="javascript:;" class="nav-link">给我留言</a>#}
+{#            </li>#}
             <li class="nav-item">
                 <a href="javascript:;" class="nav-link">关于本站</a>
             </li>
