--- a/myblog/templates/detail.html
+++ b/myblog/templates/detail.html
@@ -22,7 +22,7 @@
     <h5 class="text-center my-3">文章标题</h5>
     <ul class="left1">
         <li><i class="fa fa-tag" aria-hidden="true">&nbsp;<small><a href="javascript:;"
-                                                                    class="text-success">人民日报</a></small></i>
+                                                                    class="text-success">稀有资源</a></small></i>
         </li>
         <li><i class="fa fa-user-circle">&nbsp;<small>刘飞</small></i></li>
         <li><i class="fa fa-eye"></i>&nbsp;<small>100</small></li>
