--- a/myblog/templates/crawl.html
+++ b/myblog/templates/crawl.html
@@ -51,22 +51,22 @@
     {% endblock %}
 
     <div class="my-3 p-2 color-crawl border border-danger">
-        <a href="javascript:;" class="badge badge-pill badge-danger p-2 my-1 text-center border border-primary">人民日报</a>
-        <a href="javascript:;" class="badge badge-pill badge-danger p-2 my-1 text-center border border-primary">人民日报</a>
-        <a href="javascript:;" class="badge badge-pill badge-danger p-2 my-1 text-center border border-primary">人民日报</a>
-        <a href="javascript:;" class="badge badge-pill badge-danger p-2 my-1 text-center border border-primary">人民日报</a>
-        <a href="javascript:;" class="badge badge-pill badge-danger p-2 my-1 text-center border border-primary">人民日报</a>
-        <a href="javascript:;" class="badge badge-pill badge-danger p-2 my-1 text-center border border-primary">人民日报</a>
-        <a href="javascript:;" class="badge badge-pill badge-danger p-2 my-1 text-center border border-primary">人民日报</a>
-        <a href="javascript:;" class="badge badge-pill badge-danger p-2 my-1 text-center border border-primary">人民日报</a>
-        <a href="javascript:;" class="badge badge-pill badge-danger p-2 my-1 text-center border border-primary">人民日报</a>
-        <a href="javascript:;" class="badge badge-pill badge-danger p-2 my-1 text-center border border-primary">人民日报</a>
-        <a href="javascript:;" class="badge badge-pill badge-danger p-2 my-1 text-center border border-primary">人民日报</a>
-        <a href="javascript:;" class="badge badge-pill badge-danger p-2 my-1 text-center border border-primary">人民日报</a>
-        <a href="javascript:;" class="badge badge-pill badge-danger p-2 my-1 text-center border border-primary">人民日报</a>
-        <a href="javascript:;" class="badge badge-pill badge-danger p-2 my-1 text-center border border-primary">人民日报</a>
-        <a href="javascript:;" class="badge badge-pill badge-danger p-2 my-1 text-center border border-primary">人民日报</a>
-        <a href="javascript:;" class="badge badge-pill badge-danger p-2 my-1 text-center border border-primary">人民日报</a>
+{#        <a href="javascript:;" class="badge badge-pill badge-danger p-2 my-1 text-center border border-primary">稀有资源</a>#}
+{#        <a href="javascript:;" class="badge badge-pill badge-danger p-2 my-1 text-center border border-primary">稀有资源</a>#}
+{#        <a href="javascript:;" class="badge badge-pill badge-danger p-2 my-1 text-center border border-primary">稀有资源</a>#}
+{#        <a href="javascript:;" class="badge badge-pill badge-danger p-2 my-1 text-center border border-primary">稀有资源</a>#}
+{#        <a href="javascript:;" class="badge badge-pill badge-danger p-2 my-1 text-center border border-primary">稀有资源</a>#}
+{#        <a href="javascript:;" class="badge badge-pill badge-danger p-2 my-1 text-center border border-primary">稀有资源</a>#}
+{#        <a href="javascript:;" class="badge badge-pill badge-danger p-2 my-1 text-center border border-primary">稀有资源</a>#}
+{#        <a href="javascript:;" class="badge badge-pill badge-danger p-2 my-1 text-center border border-primary">稀有资源</a>#}
+{#        <a href="javascript:;" class="badge badge-pill badge-danger p-2 my-1 text-center border border-primary">稀有资源</a>#}
+{#        <a href="javascript:;" class="badge badge-pill badge-danger p-2 my-1 text-center border border-primary">稀有资源</a>#}
+{#        <a href="javascript:;" class="badge badge-pill badge-danger p-2 my-1 text-center border border-primary">稀有资源</a>#}
+{#        <a href="javascript:;" class="badge badge-pill badge-danger p-2 my-1 text-center border border-primary">稀有资源</a>#}
+{#        <a href="javascript:;" class="badge badge-pill badge-danger p-2 my-1 text-center border border-primary">稀有资源</a>#}
+{#        <a href="javascript:;" class="badge badge-pill badge-danger p-2 my-1 text-center border border-primary">稀有资源</a>#}
+{#        <a href="javascript:;" class="badge badge-pill badge-danger p-2 my-1 text-center border border-primary">稀有资源</a>#}
+{#        <a href="javascript:;" class="badge badge-pill badge-danger p-2 my-1 text-center border border-primary">稀有资源</a>#}
     </div>
 {% endblock %}
 {#热门文章#}
@@ -96,7 +96,7 @@
                     <li><i class="fa fa-calendar"></i>&nbsp;<small>2020-06-29</small></li>
                     <li><i class="fa fa-user-circle">&nbsp;<small>刘飞</small></i></li>
                     <li><i class="fa fa-tag" aria-hidden="true">&nbsp;<small><a href="javascript:;"
-                                                                                class="text-success">人民日报</a></small></i>
+                                                                                class="text-success">稀有资源</a></small></i>
                     </li>
                 </ul>
             </div>
@@ -114,7 +114,7 @@
                     <li><i class="fa fa-calendar"></i>&nbsp;<small>2020-06-29</small></li>
                     <li><i class="fa fa-user-circle">&nbsp;<small>刘飞</small></i></li>
                     <li><i class="fa fa-tag" aria-hidden="true">&nbsp;<small><a href="javascript:;"
-                                                                                class="text-success">人民日报</a></small></i>
+                                                                                class="text-success">稀有资源</a></small></i>
                     </li>
                 </ul>
             </div>
@@ -132,7 +132,7 @@
                     <li><i class="fa fa-calendar"></i>&nbsp;<small>2020-06-29</small></li>
                     <li><i class="fa fa-user-circle">&nbsp;<small>刘飞</small></i></li>
                     <li><i class="fa fa-tag" aria-hidden="true">&nbsp;<small><a href="javascript:;"
-                                                                                class="text-success">人民日报</a></small></i>
+                                                                                class="text-success">稀有资源</a></small></i>
                     </li>
                 </ul>
             </div>
@@ -153,7 +153,7 @@
                     <li><i class="fa fa-calendar"></i>&nbsp;<small>2020-06-29</small></li>
                     <li><i class="fa fa-user-circle">&nbsp;<small>刘飞</small></i></li>
                     <li><i class="fa fa-tag" aria-hidden="true">&nbsp;<small><a href="javascript:;"
-                                                                                class="text-success">人民日报</a></small></i>
+                                                                                class="text-success">稀有资源</a></small></i>
                     </li>
                 </ul>
             </div>
@@ -171,7 +171,7 @@
                     <li><i class="fa fa-calendar"></i>&nbsp;<small>2020-06-29</small></li>
                     <li><i class="fa fa-user-circle">&nbsp;<small>刘飞</small></i></li>
                     <li><i class="fa fa-tag" aria-hidden="true">&nbsp;<small><a href="javascript:;"
-                                                                                class="text-success">人民日报</a></small></i>
+                                                                                class="text-success">稀有资源</a></small></i>
                     </li>
                 </ul>
             </div>
@@ -189,7 +189,7 @@
                     <li><i class="fa fa-calendar"></i>&nbsp;<small>2020-06-29</small></li>
                     <li><i class="fa fa-user-circle">&nbsp;<small>刘飞</small></i></li>
                     <li><i class="fa fa-tag" aria-hidden="true">&nbsp;<small><a href="javascript:;"
-                                                                                class="text-success">人民日报</a></small></i>
+                                                                                class="text-success">稀有资源</a></small></i>
                     </li>
                 </ul>
             </div>
@@ -210,7 +210,7 @@
                     <li><i class="fa fa-calendar"></i>&nbsp;<small>2020-06-29</small></li>
                     <li><i class="fa fa-user-circle">&nbsp;<small>刘飞</small></i></li>
                     <li><i class="fa fa-tag" aria-hidden="true">&nbsp;<small><a href="javascript:;"
-                                                                                class="text-success">人民日报</a></small></i>
+                                                                                class="text-success">稀有资源</a></small></i>
                     </li>
                 </ul>
             </div>
@@ -228,7 +228,7 @@
                     <li><i class="fa fa-calendar"></i>&nbsp;<small>2020-06-29</small></li>
                     <li><i class="fa fa-user-circle">&nbsp;<small>刘飞</small></i></li>
                     <li><i class="fa fa-tag" aria-hidden="true">&nbsp;<small><a href="javascript:;"
-                                                                                class="text-success">人民日报</a></small></i>
+                                                                                class="text-success">稀有资源</a></small></i>
                     </li>
                 </ul>
             </div>
@@ -246,7 +246,7 @@
                     <li><i class="fa fa-calendar"></i>&nbsp;<small>2020-06-29</small></li>
                     <li><i class="fa fa-user-circle">&nbsp;<small>刘飞</small></i></li>
                     <li><i class="fa fa-tag" aria-hidden="true">&nbsp;<small><a href="javascript:;"
-                                                                                class="text-success">人民日报</a></small></i>
+                                                                                class="text-success">稀有资源</a></small></i>
                     </li>
                 </ul>
             </div>
@@ -267,7 +267,7 @@
                     <li><i class="fa fa-calendar"></i>&nbsp;<small>2020-06-29</small></li>
                     <li><i class="fa fa-user-circle">&nbsp;<small>刘飞</small></i></li>
                     <li><i class="fa fa-tag" aria-hidden="true">&nbsp;<small><a href="javascript:;"
-                                                                                class="text-success">人民日报</a></small></i>
+                                                                                class="text-success">稀有资源</a></small></i>
                     </li>
                 </ul>
             </div>
@@ -285,7 +285,7 @@
                     <li><i class="fa fa-calendar"></i>&nbsp;<small>2020-06-29</small></li>
                     <li><i class="fa fa-user-circle">&nbsp;<small>刘飞</small></i></li>
                     <li><i class="fa fa-tag" aria-hidden="true">&nbsp;<small><a href="javascript:;"
-                                                                                class="text-success">人民日报</a></small></i>
+                                                                                class="text-success">稀有资源</a></small></i>
                     </li>
                 </ul>
             </div>
@@ -303,7 +303,7 @@
                     <li><i class="fa fa-calendar"></i>&nbsp;<small>2020-06-29</small></li>
                     <li><i class="fa fa-user-circle">&nbsp;<small>刘飞</small></i></li>
                     <li><i class="fa fa-tag" aria-hidden="true">&nbsp;<small><a href="javascript:;"
-                                                                                class="text-success">人民日报</a></small></i>
+                                                                                class="text-success">稀有资源</a></small></i>
                     </li>
                 </ul>
             </div>
@@ -324,7 +324,7 @@
                     <li><i class="fa fa-calendar"></i>&nbsp;<small>2020-06-29</small></li>
                     <li><i class="fa fa-user-circle">&nbsp;<small>刘飞</small></i></li>
                     <li><i class="fa fa-tag" aria-hidden="true">&nbsp;<small><a href="javascript:;"
-                                                                                class="text-success">人民日报</a></small></i>
+                                                                                class="text-success">稀有资源</a></small></i>
                     </li>
                 </ul>
             </div>
@@ -342,7 +342,7 @@
                     <li><i class="fa fa-calendar"></i>&nbsp;<small>2020-06-29</small></li>
                     <li><i class="fa fa-user-circle">&nbsp;<small>刘飞</small></i></li>
                     <li><i class="fa fa-tag" aria-hidden="true">&nbsp;<small><a href="javascript:;"
-                                                                                class="text-success">人民日报</a></small></i>
+                                                                                class="text-success">稀有资源</a></small></i>
                     </li>
                 </ul>
             </div>
@@ -360,7 +360,7 @@
                     <li><i class="fa fa-calendar"></i>&nbsp;<small>2020-06-29</small></li>
                     <li><i class="fa fa-user-circle">&nbsp;<small>刘飞</small></i></li>
                     <li><i class="fa fa-tag" aria-hidden="true">&nbsp;<small><a href="javascript:;"
-                                                                                class="text-success">人民日报</a></small></i>
+                                                                                class="text-success">稀有资源</a></small></i>
                     </li>
                 </ul>
             </div>
@@ -381,7 +381,7 @@
                     <li><i class="fa fa-calendar"></i>&nbsp;<small>2020-06-29</small></li>
                     <li><i class="fa fa-user-circle">&nbsp;<small>刘飞</small></i></li>
                     <li><i class="fa fa-tag" aria-hidden="true">&nbsp;<small><a href="javascript:;"
-                                                                                class="text-success">人民日报</a></small></i>
+                                                                                class="text-success">稀有资源</a></small></i>
                     </li>
                 </ul>
             </div>
@@ -399,7 +399,7 @@
                     <li><i class="fa fa-calendar"></i>&nbsp;<small>2020-06-29</small></li>
                     <li><i class="fa fa-user-circle">&nbsp;<small>刘飞</small></i></li>
                     <li><i class="fa fa-tag" aria-hidden="true">&nbsp;<small><a href="javascript:;"
-                                                                                class="text-success">人民日报</a></small></i>
+                                                                                class="text-success">稀有资源</a></small></i>
                     </li>
                 </ul>
             </div>
@@ -417,7 +417,7 @@
                     <li><i class="fa fa-calendar"></i>&nbsp;<small>2020-06-29</small></li>
                     <li><i class="fa fa-user-circle">&nbsp;<small>刘飞</small></i></li>
                     <li><i class="fa fa-tag" aria-hidden="true">&nbsp;<small><a href="javascript:;"
-                                                                                class="text-success">人民日报</a></small></i>
+                                                                                class="text-success">稀有资源</a></small></i>
                     </li>
                 </ul>
             </div>
