--- a/myblog/templates/base.html
+++ b/myblog/templates/base.html
@@ -117,7 +117,7 @@
                                 <li><i class="fa fa-calendar"></i>&nbsp;<small>2020-06-29</small></li>
                                 <li><i class="fa fa-user-circle">&nbsp;<small>刘飞</small></i></li>
                                 <li><i class="fa fa-tag" aria-hidden="true">&nbsp;<small><a href="javascript:;"
-                                                                                            class="text-success">稀有资源</a></small></i>
+                                                                                            class="text-success">iDispatch</a></small></i>
                                 </li>
                             </ul>
                         </div>
@@ -136,7 +136,7 @@
                                 <li><i class="fa fa-calendar"></i>&nbsp;<small>2020-06-29</small></li>
                                 <li><i class="fa fa-user-circle">&nbsp;<small>刘飞</small></i></li>
                                 <li><i class="fa fa-tag" aria-hidden="true">&nbsp;<small><a href="javascript:;"
-                                                                                            class="text-success">稀有资源</a></small></i>
+                                                                                            class="text-success">iDispatch</a></small></i>
                                 </li>
                             </ul>
                         </div>
@@ -154,7 +154,7 @@
                                 <li><i class="fa fa-calendar"></i>&nbsp;<small>2020-06-29</small></li>
                                 <li><i class="fa fa-user-circle">&nbsp;<small>刘飞</small></i></li>
                                 <li><i class="fa fa-tag" aria-hidden="true">&nbsp;<small><a href="javascript:;"
-                                                                                            class="text-success">稀有资源</a></small></i>
+                                                                                            class="text-success">iDispatch</a></small></i>
                                 </li>
                             </ul>
                         </div>
@@ -294,21 +294,21 @@
             {% block right_bqy %}
                 <h6 class="bqy mt-4">标签云</h6>
                 <div class="border bg-light">
-                    <a href="javascript:;" class="badge badge-info mx-2 my-1 text-center">稀有资源</a>
-                    <a href="javascript:;" class="badge badge-info mx-2 my-1 text-center">稀有资源</a>
-                    <a href="javascript:;" class="badge badge-info mx-2 my-1 text-center">稀有资源</a>
-                    <a href="javascript:;" class="badge badge-info mx-2 my-1 text-center">稀有资源</a>
-                    <a href="javascript:;" class="badge badge-info mx-2 my-1 text-center">稀有资源</a>
-                    <a href="javascript:;" class="badge badge-info mx-2 my-1 text-center">稀有资源</a>
-                    <a href="javascript:;" class="badge badge-info mx-2 my-1 text-center">稀有资源</a>
-                    <a href="javascript:;" class="badge badge-info mx-2 my-1 text-center">稀有资源</a>
-                    <a href="javascript:;" class="badge badge-info mx-2 my-1 text-center">稀有资源</a>
-                    <a href="javascript:;" class="badge badge-info mx-2 my-1 text-center">稀有资源</a>
-                    <a href="javascript:;" class="badge badge-info mx-2 my-1 text-center">稀有资源</a>
-                    <a href="javascript:;" class="badge badge-info mx-2 my-1 text-center">稀有资源</a>
-                    <a href="javascript:;" class="badge badge-info mx-2 my-1 text-center">稀有资源</a>
-                    <a href="javascript:;" class="badge badge-info mx-2 my-1 text-center">稀有资源</a>
-                    <a href="javascript:;" class="badge badge-info mx-2 my-1 text-center">稀有资源</a>
+                    <a href="javascript:;" class="badge badge-info mx-2 my-1 text-center">iDispatch</a>
+                    <a href="javascript:;" class="badge badge-info mx-2 my-1 text-center">iDispatch</a>
+                    <a href="javascript:;" class="badge badge-info mx-2 my-1 text-center">iDispatch</a>
+                    <a href="javascript:;" class="badge badge-info mx-2 my-1 text-center">iDispatch</a>
+                    <a href="javascript:;" class="badge badge-info mx-2 my-1 text-center">iDispatch</a>
+                    <a href="javascript:;" class="badge badge-info mx-2 my-1 text-center">iDispatch</a>
+                    <a href="javascript:;" class="badge badge-info mx-2 my-1 text-center">iDispatch</a>
+                    <a href="javascript:;" class="badge badge-info mx-2 my-1 text-center">iDispatch</a>
+                    <a href="javascript:;" class="badge badge-info mx-2 my-1 text-center">iDispatch</a>
+                    <a href="javascript:;" class="badge badge-info mx-2 my-1 text-center">iDispatch</a>
+                    <a href="javascript:;" class="badge badge-info mx-2 my-1 text-center">iDispatch</a>
+                    <a href="javascript:;" class="badge badge-info mx-2 my-1 text-center">iDispatch</a>
+                    <a href="javascript:;" class="badge badge-info mx-2 my-1 text-center">iDispatch</a>
+                    <a href="javascript:;" class="badge badge-info mx-2 my-1 text-center">iDispatch</a>
+                    <a href="javascript:;" class="badge badge-info mx-2 my-1 text-center">iDispatch</a>
                 </div>
             {% endblock %}
         {% endblock %}
